[gd_scene load_steps=5 format=3 uid="uid://xrx5ih0ivcf6"]

[ext_resource type="Theme" uid="uid://du8l63a56uknv" path="res://resources/themes/EventPanel.tres" id="1_mo2r3"]
[ext_resource type="Script" path="res://scripts/angt_event.gd" id="1_vdnm4"]
[ext_resource type="Texture2D" uid="uid://yam1fjl0jbao" path="res://resources/items/pointerDragingFly.png" id="2_hfj5x"]
[ext_resource type="Texture2D" uid="uid://msb7gqh304sm" path="res://resources/characters/wanderer_ang-t.png" id="3_ww8ft"]

[node name="TheWatcherAntEvent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vdnm4")

[node name="EventPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -314.0
offset_top = -160.0
offset_right = 315.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_mo2r3")

[node name="MainEvent" type="Label" parent="EventPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.5
offset_top = -59.388
offset_right = 293.5
offset_bottom = 28.612
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mo2r3")
text = "Wanderer The Ang-T
\"He seems to have waddled his way towards where you are.
He says his vision will tell you the hopeful truth, or possible lie.\"
Take the chance?
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yes" type="Label" parent="EventPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 144.0
offset_top = -27.9392
offset_right = 247.0
offset_bottom = 3.06079
grow_vertical = 0
theme = ExtResource("1_mo2r3")
text = "Yes"
horizontal_alignment = 1

[node name="No" type="Label" parent="EventPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 398.0
offset_top = -30.9787
offset_right = 501.0
offset_bottom = 0.0212708
grow_vertical = 0
theme = ExtResource("1_mo2r3")
text = "No"
horizontal_alignment = 1

[node name="PointerAngt" type="Sprite2D" parent="EventPanel"]
position = Vector2(157, 137)
texture = ExtResource("2_hfj5x")

[node name="WandererAngt" type="Sprite2D" parent="."]
position = Vector2(-66, 361)
scale = Vector2(0.419866, 0.437041)
texture = ExtResource("3_ww8ft")
flip_h = true

[node name="EventTimer" type="Timer" parent="."]

[node name="TextTimer" type="Timer" parent="."]

[node name="ChoiceTimer" type="Timer" parent="."]

[node name="EffectTImer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="EventTimer" to="." method="_on_event_timer_timeout"]
[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="ChoiceTimer" to="." method="_on_selection_choice_timeout"]
[connection signal="timeout" from="EffectTImer" to="." method="_on_bedu_timer_timeout"]
